--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,16 @@
 site_name: JackTrip
 nav:
    - Home: index.md
-   - Installation: Install.md
-   - Build:
-       - QMake: Build/QMake_build.md
-       - Meson: Build/Meson_build.md
+   - User Guide:
+       - Installation: Install.md
+   - Developer Guide:
+       - Linux: Build/Linux.md
+       - Mac OS: Build/Mac.md
+       - Windows: Build/Windows.md
+       - Meson Build: Build/Meson_build.md
    - About:
        - Changelog: CHANGELOG.md
-theme: readthedocs
+theme:
+  name: material
+  features:
+    - navigation.tabs
