--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -27,6 +27,9 @@ jobs:
             runs-on: ubuntu-18.04
           - name: macOS
             runs-on: macos-10.15
+          - name: macOS-static
+            runs-on: macos-10.15
+            static: true
           - name: Windows
             runs-on: windows-2019
 
@@ -34,6 +37,11 @@ jobs:
       SRC_PATH: ${{ github.workspace }}/src
       BUILD_PATH: ${{ github.workspace }}/builddir
       QT_VERSION: '5.15.2'
+      DEVELOPER_DIR: '/Applications/Xcode_11.7.app/Contents/Developer' # specify XCode version on macOS
+      QT_SRC_URL: 'https://download.qt.io/official_releases/qt/5.15/5.15.2/single/qt-everywhere-src-5.15.2.tar.xz'
+      QT_SRC_PATH: ${{ github.workspace }}/../qt-static-src
+      QT_STATIC_BUILD_PATH: ${{ github.workspace }}/../qt-static
+      QT_STATIC_CACHE_KEY: '5.15.2_v01'
     steps:
       - uses: actions/checkout@v2
       - name: install dependencies for Linux
@@ -48,8 +56,11 @@ jobs:
           HOMEBREW_NO_AUTO_UPDATE: 1
           HOMEBREW_NO_INSTALL_CLEANUP: 1
         run: |
-          brew install qt5 jack
-          brew link qt5 --force
+          brew install jack
+          if [[ "${{ matrix.static }}" != true ]]; then 
+            brew install qt5
+            brew link qt5 --force
+          fi
       - name: install dependencies for Windows
         if: runner.os == 'Windows'
         run: |
@@ -68,13 +79,41 @@ jobs:
           version: ${{ env.QT_VERSION }}
           arch: 'win64_mingw81'
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
+      - name: cache static Qt
+        id: cache-static-qt
+        if: matrix.static == true
+        uses: actions/cache@v1
+        with:
+          path: ${{ env.QT_STATIC_BUILD_PATH }}
+          key: ${{ runner.os }}-QtStaticCache-${{ env.QT_STATIC_CACHE_KEY }}
+      - name: build static Qt
+        if: matrix.static == true && '!steps.cache-static-qt.outputs.cache-hit'
+        run: |
+          mkdir $QT_STATIC_BUILD_PATH
+          echo "Downloading Qt source"
+          curl -L $QT_SRC_URL -o qt.tar.xz
+          echo "Unpacking Qt source"
+          tar -xf qt.tar.xz
+          # move qt to a known location
+          mv qt-everywhere* $QT_SRC_PATH
+          # configure
+          "$QT_SRC_PATH/configure" -static -release -ltcg -optimize-size -no-pch -prefix "$QT_STATIC_BUILD_PATH" -skip webengine -skip qt3d -skip qtactiveqt -skip qtandroidextras -skip qtcharts -skip qtdatavis3d -skip qtdeclarative -skip qtdoc -skip qtgamepad -skip qtgraphicaleffects -skip qtimageformats -skip qtlocation -skip qtlottie -skip qtmultimedia -skip qtpurchasing -skip qtquick3d -skip qtpurchasing -skip qtquickcontrols -skip qtquickcontrols2 -skip qtquicktimeline -skip qtremoteobjects -skip qtscript -skip qtsensors -skip qtserialbus -skip qtserialport -skip qtspeech -skip qtsvg -skip qttools -skip qtvirtualkeyboard -skip qtwayland -skip qtwebchannel -skip qtwebengine -skip qtwebglplugin -skip qtwebsockets -skip qtwebview -skip qtxmlpatterns -nomake tools -nomake tests -nomake examples -opensource -confirm-license
+          # build
+          echo "building Qt"
+          make -j4
+          # install
+          echo "installing Qt"
+          make install
       - name: build on Linux / macOS
         if: runner.os != 'Windows'
-        env:
-          DEVELOPER_DIR: '/Applications/Xcode_11.7.app/Contents/Developer' # specify XCode version on macOS
         run: |
           cd $SRC_PATH
-          ./build
+          if [[ "${{ matrix.static }}" == true ]]; then 
+            export PATH=$QT_STATIC_BUILD_PATH/bin:$PATH
+            ./build static
+          else
+            ./build
+          fi
       - name: build on Windows
         if: runner.os == 'Windows'
         shell: bash
