Replace cryptic error message on linux if no X or Wayland display
If no x or wayland display is set, show the user a more informative error message than the qt plugin one that otherwise appears.

Also, replace __NO_GUI__ with NO_GUI (addresses part of #276)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(QJackTrip)
 set(nogui FALSE)
 
 if (nogui)
-  add_compile_definitions(__NO_GUI__)
+  add_compile_definitions(NO_GUI)
 endif ()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
