--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -76,7 +76,7 @@ jobs:
       DEVELOPER_DIR: '/Applications/Xcode_11.7.app/Contents/Developer' # specify XCode version on macOS
       QT_SRC_PATH: ${{ github.workspace }}/../qt-static-src
       QT_STATIC_BUILD_PATH: ${{ github.workspace }}/../qt-static
-      QT_STATIC_VERSION: 'v04' # update this to force rebuilding static Qt
+      QT_STATIC_CACHE_KEY: 'v04' # update this to force rebuilding static Qt
       QT_STATIC_OPTIONS: '-static -release -optimize-size -no-pch -nomake tools -nomake tests -nomake examples -opensource -confirm-license -skip webengine -skip qt3d -skip qtactiveqt -skip qtandroidextras -skip qtcharts -skip qtdatavis3d -skip qtdeclarative -skip qtdoc -skip qtgamepad -skip qtgraphicaleffects -skip qtimageformats -skip qtlocation -skip qtmultimedia -skip qtpurchasing -skip qtpurchasing -skip qtquickcontrols -skip qtquickcontrols2 -skip qtremoteobjects -skip qtscript -skip qtsensors -skip qtserialbus -skip qtserialport -skip qtspeech -skip qtsvg -skip qttools -skip qtvirtualkeyboard -skip qtwayland -skip qtwebchannel -skip qtwebengine -skip qtwebglplugin -skip qtwebsockets -skip qtwebview -skip qtxmlpatterns' # common for all platforms
       
     steps:
@@ -157,7 +157,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ env.QT_STATIC_BUILD_PATH }}
-          key: ${{ runner.os }}-QtStaticCache-${{ matrix.static-qt-version }}_${{ env.QT_STATIC_VERSION }}
+          key: ${{ runner.os }}-QtStaticCache-${{ matrix.static-qt-version }}_${{ env.QT_STATIC_CACHE_KEY }}
       - name: download Qt sources
         if: matrix.static-qt-version && steps.cache-static-qt.outputs.cache-hit != 'true'
         shell: bash
